# Parallel_algos-Multithreading-and-Parallel-Algorithims-

./: .gitignore  CMakeLists.txt  README.md
parsort/: CMakeLists.txt  parsort.c  parsort.h  test_parsort.c
sum/: CMakeLists.txt  sum.c  sum.h  test_sum.c
